# MaestriaAnalisisDatosBigData_UNIR_2024

./: .agent_rules.md  .cursorrules  .gitignore  CONTEXTO_USUARIO.md  README.md
00_Propedeutico_2024/00_01_Python/: REAME.MD
00_Propedeutico_2024/00_01_SQL_BD/: README.MD
01_BasesDatosParaDatosMasivos/: README.MD
01_Cuatrimestre/01_BasesDatosParaDatosMasivos/: README.MD
02_CienciaDatosAplicada/: README.MD
03_GobiernoDatoTomaDecisiones/: README.md
03_SEMESTRE/: MANUAL_METRICAS.MD  MANUAL_PROMOCIONES.MD  MANUAL_VALIDACION_PUBLICACIONES.MD
03_SEMESTRE/03_SeminarioInnovacionAnalisisVisualizacionDatos/dashboard/: README.md  pyproject.toml  requirements.txt  run.py
03_SEMESTRE/03_SeminarioInnovacionAnalisisVisualizacionDatos/dashboard/app/: __init__.py  routes.py
03_SEMESTRE/03_SeminarioInnovacionAnalisisVisualizacionDatos/dashboard/app/controllers/: __init__.py  dashboard_controller.py
03_SEMESTRE/03_SeminarioInnovacionAnalisisVisualizacionDatos/dashboard/app/services/: ChartFactory.py  DataLoader.py  __init__.py
03_SEMESTRE/03_SeminarioInnovacionAnalisisVisualizacionDatos/dashboard/app/static/js/: main.js
03_SEMESTRE/03_SeminarioInnovacionAnalisisVisualizacionDatos/dashboard/app/templates/: base.html  fuentes.html  index.html  nosotros.html
03_SEMESTRE/03_SeminarioInnovacionAnalisisVisualizacionDatos/dashboard/app/templates/components/: evolution_section.html  kmens_random_section.html  kpi_section.html  map_section.html  table_sections.html
03_SEMESTRE/03_SeminarioInnovacionAnalisisVisualizacionDatos/dashboard/dataset/: data_set_optimizado.csv
(+273 files in other folders)
